--- a/config.json
+++ b/config.json
@@ -1,6 +1,5 @@
 {
-    "sockFile": "/tmp/rsc-data-server.sock",
-    "port": null,
+    "port": 8123,
     "sqliteFile": "./rsc-data-server.sqlite",
     "backupDirectory": "./backups",
     "password": "$2y$10$wufvP1CJMLYmBHKl2Ah2k.CGQwQV5aUMIcXrPNUfmqJ9ibNhhvFnS",
