removed .sock to make win freindly

--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "@rsc2003/rsc-data-server",
   "version": "1.0.0",
   "description": "manage rsc-server worlds, player persistence, friends, etc.",
-  "main": "./src/server.js",
+  "main": "node ./src/server.js",
   "bin": {
-    "rsc-data-server": "./src/bin.js"
+    "rsc-data-server": "node ./src/bin.js"
   },
   "scripts": {
-    "start": "./src/bin.js -v debug | garnish"
+    "start": "node ./src/bin.js -v debug | garnish"
   },
   "author": "rsc2003 Team",
   "license": "AGPL-3.0+",
